# csv_handler

./: .gitignore  CMakeLists.txt  README.md  constructor.patch  get_cluster_status.patch  mock_data.csv  start_cluster.sh  test.csv
.github/workflows/: cpp-test.yml
client/: csv_client.cpp  csv_client.cpp.rej  csv_client.hpp  main.cpp  menu.cpp  menu.hpp
core/: IStateMachine.hpp  Mutation.hpp  TableView.cpp  TableView.hpp
data/: mock_data1.csv  test_data.csv
distributed/: heartbeat.cpp  heartbeat.hpp  in_process_test.cpp  main.cpp  main_raft.cpp  raft_node.cpp  raft_node.hpp  raft_server.cpp  raft_server.hpp  raft_server_empty.cpp  raft_test  run_cluster.sh
distributed/core/: CsvStateMachine.cpp  CsvStateMachine.hpp  LogEntry.cpp  LogEntry.hpp  Mutation.cpp  Mutation.hpp  RaftStateMachine.hpp
distributed/rpc/: IRaftRPC.hpp  RaftRPC.cpp  RaftRPC.hpp  SocketRaftRPC.cpp  SocketRaftRPC.hpp
persistence/: DurableStateMachine.cpp  DurableStateMachine.hpp  PersistenceManager.cpp  PersistenceManager.hpp  Snapshot.cpp  Snapshot.hpp  WriteAheadLog.cpp  WriteAheadLog.hpp
proto/: cluster_service.proto  csv_service.grpc.pb.cc  csv_service.grpc.pb.h  csv_service.pb.cc  csv_service.pb.h  csv_service.proto  mutation.proto  raft_service.proto
proto/proto/: csv_service.grpc.pb.cc  csv_service.grpc.pb.h  csv_service.pb.cc  csv_service.pb.h
server/: main.cpp  menu.cpp  menu.hpp
server/network/: csv_service_impl.cpp  csv_service_impl.hpp  server_registry.cpp  server_registry.hpp
storage/: InMemoryStateMachine.cpp  InMemoryStateMachine.hpp  column_store.cpp  column_store.hpp  csv_parser.cpp  csv_parser.hpp
tests/: CMakeLists.txt  csv_client_test.hpp  csv_client_test_impl.cpp  test_client_server.cpp  test_columnstore_operations.cpp  test_data_mutation.cpp  test_invalid_cases.cpp  test_persistence.cpp  test_replication_and_failover.cpp
tests/cli/: menu_dispatch_test.cpp
tests/common/: grpc_test_includes.hpp  test_utils.cpp  test_utils.hpp
tests/integration/: server_client_test.cpp
tests/storage/: column_store_test.cpp  csv_parser_test.cpp
tests/utils/: file_utils_test.cpp
utils/: file_utils.cpp  file_utils.hpp
